Fixed an issue with element alignment

--- a/about us/about.css
+++ b/about us/about.css
@@ -443,16 +443,16 @@ body {
         background-color: #ffe6a7;
         width: 100vw;
         height: 100vh;
-        padding: 20px 0;
+        padding: 20px 20px;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
         overflow: hidden;
     }
 
     /*About Us*/
     .cointainer {
         display: flex;
-        width: 100vw;
+        width: auto;
         height: auto;
         padding: 0;
         align-items: center;
@@ -462,9 +462,7 @@ body {
     .aboutUs-title {
         font: bold 3rem "Crimson Text", serif;
         color: #432818;
-        position: relative;
-        top: 33vh;
-        right: 7vw;
+        text-align: center;
     }
 
     .aboutUs-desc {
@@ -473,9 +471,6 @@ body {
         width: 40vw;
         font: 1rem "Crimson Text", serif;
         color: #432818;
-        position: relative;
-        top: 33vh;
-        right: 15vw;
         margin-right: 20px;
     }
 
@@ -485,9 +480,6 @@ body {
         background: url(/assets/images/cafe_bg.webp) center;
         object-fit: cover;
         border-radius: 40px;
-        position: relative;
-        bottom: 33vh;
-        left: 30vw;
         margin: 0;
     }
 
